fixed profile name being off centered when 3 profiles are shown

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -104,17 +104,16 @@ h2 {
 
 .profile {
   display: block;
-  background: #4b946a;
   padding: 10px 20px;
   color: #fff;
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
   transition: 0.3s;
+}
 
-  &:hover {
-    background: #388a58; /* slightly darker shade on hover */
-  }
+#profile-name {
+  color: #000;
 }
 
 #profileImg {
